--- a/views/maintenance.hbs
+++ b/views/maintenance.hbs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>web</title>
+    <link rel="shortcut icon" type="image/png" href="../favicon.png" />
 </head>
 <body>
     <h1>We'lll be right back.</h1>
