--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,5 +1,7 @@
-
-<h1>{{ pageTitle }}</h1> 
-<a href="/home">Home</a></p>
-<a href="/about">About</a>
-<a href="/projects">Projects</a>
+<header>
+    <h1>{{ pageTitle }}</h1>
+    <a href="/home">Home</a>
+    </p>
+    <a href="/about">About</a>
+    <a href="/projects">Projects</a>
+</header>
