--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+
+</head>
 <title>hbs</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="shortcut icon" type="image/png" href="../favicon.png" />
+
 <body>
 
-{{> header}}
+    {{> header}}
 
-<p>this is projects page...</p>
+    <p>this is projects page...</p>
 
-{{!-- partials --}}
-{{> footer }}
+    {{!-- partials --}} {{> footer }}
 </body>
+
 </html>
